Save files to tasks directory
This way the example is useful to the user because they can
see the files which are generated are the same for both tasks.

--- a/docs/source/user/getting_started/advanced_workflow.yaml
+++ b/docs/source/user/getting_started/advanced_workflow.yaml
@@ -42,6 +42,7 @@ template_components:
       - scope:
           type: any
         environment: python_env
+      requires_dir: true
     - script: <<script:/full/path/to/process_input_file.py>>
       script_exe: python_script
       environments:
@@ -50,6 +51,7 @@ template_components:
         environment: python_env
       save_files:
       - processed_file
+      requires_dir: true
 
   command_files:
   - label: my_input_file
